--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -21,11 +21,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33.33333333333333\n",
+      "9.195402298850574\n",
+      "8.888888888888888\n",
+      "23.645320197044338\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import bernoulli\n",
+    "import seaborn as sns\n",
+    "\n",
+    "whiteball = 10\n",
+    "redball = 12\n",
+    "blackball = 8\n",
+    "\n",
+    "sumballs = whiteball + redball + blackball\n",
+    "\n",
+    "# Basic Probability\n",
+    "print(whiteball / sumballs * 100)\n",
+    "\n",
+    "# Dependent Probability\n",
+    "second_problem = (whiteball / sumballs) * (blackball / (sumballs - 1))\n",
+    "print(second_problem * 100)\n",
+    "\n",
+    "# Independent Probability\n",
+    "third_problem = (whiteball / sumballs) * (blackball / sumballs)\n",
+    "print(third_problem * 100)\n",
+    "\n",
+    "# Three different balls\n",
+    "fourth_problem = (\n",
+    "    (whiteball / sumballs) * (redball / (sumballs - 1)) * (blackball / (sumballs - 2)) +\n",
+    "    (whiteball / sumballs) * (blackball / (sumballs - 1)) * (redball / (sumballs - 2)) +\n",
+    "    (redball / sumballs) * (whiteball / (sumballs - 1)) * (blackball / (sumballs - 2)) +\n",
+    "    (redball / sumballs) * (blackball / (sumballs - 1)) * (whiteball / (sumballs - 2)) +\n",
+    "    (blackball / sumballs) * (whiteball / (sumballs - 1)) * (redball / (sumballs - 2)) +\n",
+    "    (blackball / sumballs) * (redball / (sumballs - 1)) * (whiteball / (sumballs - 2))\n",
+    ")\n",
+    "print(fourth_problem * 100)\n",
+    "\n"
    ]
   },
   {
@@ -44,12 +86,40 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability in percent that it will rain on Saturday is: 32.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "p_cloudy = 0.4\n",
+    "rain_cloudy = 0.5\n",
+    "\n",
+    "p_not_cloudy = 0.6\n",
+    "rain_no_cloudy = 0.2\n",
+    "\n",
+    "# Law of Total Probability\n",
+    "# P(Rain)=P(Rain∣Cloudy)×P(Cloudy)+P(Rain∣NotCloudy)×P(NotCloudy)\n",
+    "\n",
+    "# Cloudy Case\n",
+    "p_rain_cloudy = p_cloudy * rain_cloudy\n",
+    "# Not Cloudy Case\n",
+    "p_rain_not_cloudy = p_not_cloudy * rain_no_cloudy\n",
+    "# Sum this up\n",
+    "total_rain = p_rain_cloudy + p_rain_not_cloudy\n",
+    "print(\"The probability in percent that it will rain on Saturday is:\", total_rain * 100)"
    ]
   },
   {
@@ -73,11 +143,131 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# first one true\n",
+    "p_a_not_happening = 1 - 0.3\n",
+    "print(p_a_not_happening)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7999999999999999\n"
+     ]
+    }
+   ],
+   "source": [
+    "# second one false\n",
+    "p_a_or_b = 0.3 + 0.6 - 0.1\n",
+    "print(p_a_or_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.19999999999999998\n"
+     ]
+    }
+   ],
+   "source": [
+    "# third one true\n",
+    "a_but_not_b = 0.3 - 0.1\n",
+    "print(a_but_not_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# fourth one true\n",
+    "a_or_not_a = 1\n",
+    "print(a_or_not_a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# fifth one false\n",
+    "print(0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.19999999999999996\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "# sixth one false\n",
+    "print(1 - 0.8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1 - 0.1)"
    ]
   },
   {
@@ -98,11 +288,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.041666666666666664"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "p_i = 1/6\n",
+    "p_ch = 5/6\n",
+    "p_covid_ch = 0.01\n",
+    "p_covid_i = 0.20\n",
+    "\n",
+    "# Total Law of Probability\n",
+    "p_covid = (p_covid_ch * p_ch) + (p_covid_i * p_i)\n",
+    "p_covid\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20.0"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_ch_c = (p_covid_ch * p_ch) / p_covid\n",
+    "p_ch_c * 100"
    ]
   },
   {
@@ -123,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +363,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -147,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.13.2"
   },
   "toc": {
    "base_numbering": 1,
